# DATN_DeepVariant

./: .gitignore  README.md  pyproject.toml  requirements.txt
deepvariant_train/: __init__.py  data.py  evaluate_and_plot.py  inspect_tfrecord.py  models.py  smoke_test.py  train.py
scripts/: evaluate_gpu_wsl_terminal.sh  train_all_gpu_wsl.sh  train_all_gpu_wsl_terminal.sh
tfrecords/: HG004_chr20_test.with_label.tfrecord-00006-of-00008.gz.example_info.json
